[build-system]
requires = [
  "setuptools>=61.0.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "vsi_common"
version = "0.0.1"
description = "VSI Library"
dependencies = []
license = "MIT"
readme = "README.md"
authors = [
  {name = "Andy Neff", email = "andrew.neff@visionsystemsinc.com"},
]

[project.urls]
Homepage = "https://github.com/VisionSystemsInc/vsi_common"

[project.optional-dependencies]
gdal = [
  "gdal",
  "numpy",
  "shapely",

]
rasterio = [
  "numpy",
  "rasterio",
  "shapely",
]

[tool.setuptools.packages.find]
where = ["python"]
namespaces = false
